fixed profile section text overflow

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -142,7 +142,7 @@
   }
 }
 
-@media only screen and (max-width: 320px) {
+@media (max-width: 320px) {
   .profile {
     flex-direction: column;
     align-items: center;
